Clear Sync auth error state on token fetch success

last_auth_error_ was set from OnGetTokenFailure, but then never cleared
in onGetTokenSuccess. This meant that the error could stay around, even
if the causing token issue was resolved.

BUG=822182

Change-Id: I135baa55d8e81860313dd02f2ca432f0482c3c10
Reviewed-on: https://chromium-review.googlesource.com/964334
Commit-Queue: Florian Uunk <feuunk@chromium.org>
Reviewed-by: Mikel Astiz <mastiz@chromium.org>
Reviewed-by: Marc Treib <treib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544008}
Former-commit-id: a4d587066de6d0b6a2e6202eb63915127a7aa528